Learning Priority Queues, Queues, Linked Lists and Stacks